--- a/.gitignore
+++ b/.gitignore
@@ -13,14 +13,7 @@ checking_collected_data.ipynb
 testing_AE.ipynb
 *.pkl
 ###
-# complex_1.pt
-# complex_11.pt
-# complex_2.pt
-# complex_22.pt
-# complex_33.pt
-# complex_44.pt 
-# complex_55 
-my-saved-model-5x5-naive.pt 
+additional_reward.py
 
 
 
